# coat-bulk-download

./: .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml
coat_bulk_download/: app.py  config.py  geojson.py  pull_datasets.py
coat_bulk_download/templates/: definition.xml
templates/: eml.xml  example.xml
